Removed all public blogs for now until it can be tested 0.054; Changed general posts to show all public posts 0.053;  Added comment type setting 0.052; Removed dependency on wall and oembed, added date to the header 0.051

--- a/simpleblog/register.conf
+++ b/simpleblog/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Simple blog
 MODULE_DESCRIPTION: A simplified version of a blog module that makes use a simplified, dynamic canvas interface allowing users to turn on side blocks using page level blocks. Supports personal blogs, site-level blogs and context-level blogs.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 17, 2011, 1:41 pm
-MODULE_VERSION: 0.050
+MODULE_VERSION: 0.054
 MODULE_PATH: simpleblog
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,7 +11,11 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: simpleblog
 MODULE_CATEGORY: simpleblog
 MODULE_STATUS: stable
+TAGS: blog
 
+UPDATE_DESCRIPTION: [dwk] Changed general posts to show all public posts 0.053
+UPDATE_DESCRIPTION: [dwk] Added comment type setting 0.052
+UPDATE_DESCRIPTION: [dwk] Removed dependency on wall and oembed, added date to the header 0.051
 UPDATE_DESCRIPTION: [dwk] Added language strings for wall posts, added script to activate links like Facebook does if a certain class is used, added return to context when editing context blog 0.050
 UPDATE_DESCRIPTION: [dwk] Added it to the workspace menu 0.048
 UPDATE_DESCRIPTION: [dwk] Added blocks for linking to RSS feed 0.046 and 0.047
@@ -33,8 +37,8 @@ TABLE: tbl_simpleblog_posts
 TABLE: tbl_simpleblog_blogs
 TABLE: tbl_simpleblog_moduleblocks
 
-DEPENDS: oembed
-DEPENDS: wall
+//DEPENDS oembed
+//DEPENDS wall
 DEPENDS: socialweb
 
 COMMENT: --- Make it context aware and a context plugin, but not forced to context
@@ -50,7 +54,7 @@ COMMENT----DEPENDS: demodata
 COMMENT: /END  ----------------- THESE ARE FOR USE DURING DEVELOPMENT
 
 COMMENT: --- Register the blocks that this module provides
-WIDEBLOCK: simpleblogmiddle
+//WIDEBLOCK  simpleblogmiddle
 WIDEBLOCK: siteblog
 WIDEBLOCK: contextblog
 BLOCK: addpost
@@ -69,6 +73,8 @@ CONFIG: simpleblog_defaulttype|site|mod_simpleblog_defaulttype
 TEXT: simpleblog_defaulttype|Default type of blog to display|Default type of blog to display when no information is provided in the querystring (default - personal, options - personal, site). Note that you cannot make the default context as the user might not be in a [-contex-] when opening the blog.
 CONFIG: simpleblog_defaultblog|site|mod_simpleblog_defaultblog
 TEXT: mod_simpleblog_defaultblog|Default blog to display|Default blog to display when no information is provided in the querystring. If the default blog is personal, then this will be the userid of the default blogger. Leave blank to show list of bloggers (this functionality is not completed). Note that you cannot make the default context as the user might not be in a [-contex-] when opening the blog.
+CONFIG: simpleblog_commentsystem|NONE|mod_simpleblog_commentsystem
+TEXT: mod_simpleblog_commentsystem|The type of comment system to use|The type of comment system to use with the Simpleblog module. Valid options are NONE, WALL.
 
 
 COMMENT: --- Normal text entries
@@ -91,7 +97,7 @@ TEXT: mod_simpleblog_nocommentsyet|No comments yet|No comments yet
 
 TEXT: mod_simpleblog_numcmtssn|This post has [-NUMPOSTS-] comment (singular)|This post has [-NUMPOSTS-] comment
 TEXT: mod_simpleblog_numcmtspl|This post has [-NUMPOSTS-] comments (plural)|This post has [-NUMPOSTS-] comments
-TEXT: mod_simpleblog_posts|Blog posts|Blog posts
+TEXT: mod_simpleblog_posts|All public blog posts|All public blog posts
 
 TEXT: mod_simpleblog_siteposts|Site posts|Site posts
 TEXT: mod_simpleblog_personal|My personal blog|My personal blog
