Added block for most recent post to site blog

--- a/simpleblog/register.conf
+++ b/simpleblog/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Simple blog
 MODULE_DESCRIPTION: A simplified version of a blog module that makes use a simplified, dynamic canvas interface allowing users to turn on side blocks using page level blocks. Supports personal blogs, site-level blogs and context-level blogs.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 17, 2011, 1:41 pm
-MODULE_VERSION: 0.057
+MODULE_VERSION: 0.060
 MODULE_PATH: simpleblog
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -13,6 +13,7 @@ MODULE_CATEGORY: simpleblog
 MODULE_STATUS: stable
 TAGS: blog
 
+UPDATE_DESCRIPTION: [dwk] Language items, added recent site posts block, various refactors, turned off title wrapping in blocks
 UPDATE_DESCRIPTION: [dwk] Changed general posts to show all public posts 0.053
 UPDATE_DESCRIPTION: [dwk] Added comment type setting 0.052
 UPDATE_DESCRIPTION: [dwk] Removed dependency on wall and oembed, added date to the header 0.051
@@ -49,10 +50,6 @@ DEPENDS_CONTEXT: 0
 MENU_CATEGORY: User
 SIDEMENU: user-1
 
-COMMENT: /BEGIN----------------- THESE ARE FOR USE DURING DEVELOPMENT
-COMMENT----DEPENDS: demodata
-COMMENT: /END  ----------------- THESE ARE FOR USE DURING DEVELOPMENT
-
 COMMENT: --- Register the blocks that this module provides
 //WIDEBLOCK  simpleblogmiddle
 WIDEBLOCK: siteblog
@@ -63,6 +60,7 @@ BLOCK: aboutsiteblog
 BLOCK: archives
 BLOCK: tagcloud
 BLOCK: simplesearch
+BLOCK: mostrecentsite
 BLOCK: sitefeed
 BLOCK: userfeed
 
@@ -114,6 +112,8 @@ TEXT: mod_simpleblog_tagcloud|Tag cloud|Tag cloud
 TEXT: mod_simpleblog_search|Search blogs|Search blogs
 TEXT: mod_simpleblog_sitefeed|Site blog feed|Site blog feed
 TEXT: mod_simpleblog_userfeed|User blog feed|User blog feed
+
+TEXT: mod_simpleblog_mrecentsite|Latest site blog post|Latest site blog post
 
 TEXT: mod_simpleblog_nfprivatecontext|[-CONTEXT-] is not public|[-CONTEXT-] is not public
 TEXT: mod_simpleblog_nfprivatecontextdes|Only blogs in open [-CONTEXTS-] can have public feeds|Only blogs in open [-CONTEXTS-] can have public feeds
