Minor bug fixes

--- a/forum/register.conf
+++ b/forum/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Discussion Forum
 MODULE_DESCRIPTION: This is a bulletin board system that allows users to post messages for others to read, and to reply to messages posted by other users. Messages are structured in a tree format but users can select how the forum is displayed to them. There is also support for tangents and moderation of messages.
 MODULE_AUTHORS: Tohir Solomons, enhancements by David Wafula
 MODULE_RELEASEDATE: 2006 08 25
-MODULE_VERSION: 3.015
+MODULE_VERSION: 3.016
 MODULE_PATH: forum
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -102,6 +102,7 @@ USES: phrase_save|Save|Save
 USES: phrase_viewattachment|view attachment|View
 USES: phrase_downloadattachment|download attachment|Download
 USES: phrase_starttopic|start new topic|Start new topic
+USES: phrase_nitification|modify notification|Modify notifications
 
 TEXT: mod_forum_allow_prelogin_desc|description of config variable|Can users view forum without logging in
 TEXT: mod_forum_showfullname_desc|description of config variable|Should full names or just username
