Language items, added recent site posts block, various refactors, turned off title wrapping in blocks, fixed page nav for by=user, removed jQuery.live() use. 0.062

--- a/simpleblog/register.conf
+++ b/simpleblog/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Simple blog
 MODULE_DESCRIPTION: A simplified version of a blog module that makes use a simplified, dynamic canvas interface allowing users to turn on side blocks using page level blocks. Supports personal blogs, site-level blogs and context-level blogs.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 17, 2011, 1:41 pm
-MODULE_VERSION: 0.060
+MODULE_VERSION: 0.062
 MODULE_PATH: simpleblog
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -13,7 +13,7 @@ MODULE_CATEGORY: simpleblog
 MODULE_STATUS: stable
 TAGS: blog
 
-UPDATE_DESCRIPTION: [dwk] Language items, added recent site posts block, various refactors, turned off title wrapping in blocks
+UPDATE_DESCRIPTION: [dwk] Language items, added recent site posts block, various refactors, turned off title wrapping in blocks, fixed page nav for by=user, removed jQuery.live() use. 0.062
 UPDATE_DESCRIPTION: [dwk] Changed general posts to show all public posts 0.053
 UPDATE_DESCRIPTION: [dwk] Added comment type setting 0.052
 UPDATE_DESCRIPTION: [dwk] Removed dependency on wall and oembed, added date to the header 0.051
@@ -38,7 +38,7 @@ TABLE: tbl_simpleblog_posts
 TABLE: tbl_simpleblog_blogs
 TABLE: tbl_simpleblog_moduleblocks
 
-//DEPENDS oembed
+DEPENDS oembed
 //DEPENDS wall
 DEPENDS: socialweb
 
