Removed jQuery.live()

--- a/slate/register.conf
+++ b/slate/register.conf
@@ -21,6 +21,7 @@ PAGE: admin_site|manage|manageslates|mod_slate_manage
 
 WIDEBLOCK: slatepages
 
+UPDATE_DESCRIPTION: [dwk] Removed jQuery.live() 0.014
 UPDATE_DESCRIPTION: [dwk] Removed debugging code
 UPDATE_DESCRIPTION: Removed manage|manageslates|mod_slate_manage accidentally added as menu category
 
