updated rtt client

--- a/rtt/register.conf
+++ b/rtt/register.conf
@@ -1,9 +1,9 @@
 MODULE_ID: rtt
-MODULE_NAME: Realtime Communication Tools
+MODULE_NAME: Realtime Tools
 MODULE_DESCRIPTION: Module supporting real time communications.
 MODULE_AUTHORS: Warren Windvogel, David Wafula
 MODULE_RELEASEDATE: 2010 09 14
-MODULE_VERSION: 1.1006
+MODULE_VERSION: 1.1009
 MODULE_PATH: rtt
 MODULE_ISADMIN: 0
 MODULE_HASADMINPAGE: 0
