Enabled email retrieval

--- a/forum/register.conf
+++ b/forum/register.conf
@@ -53,6 +53,18 @@ DEPENDS_CONTEXT: 0
 CONDITION: iscontextlecturer|isContextMember|Lecturers
 CONDITION: isAdmin|isAdmin
 
+CONFIG: forum_mail_host|0|mod_forum_mail_host
+CONFIG: forum_inbox_username|0|mod_forum_config_inbox_username
+CONFIG: forum_inbox_password|0|mod_forum_config_inbox_password
+CONFIG forum_email_port|0|mod_forum_config_email_port
+CONFIG forum_email_options|0|mod_forum_config_email_options
+
+TEXT: mod_forum_mail_host|The mail host|Mail inbox host
+TEXT: mod_forum_config_email_options|Mail options|Email inbox options
+TEXT: mod_forum_config_email_port|Mail Port|Mail inbox Port
+TEXT: mod_forum_config_inbox_password|Mail inbox password|Mail password
+TEXT: mod_forum_config_inbox_username|Inbox username|Mail Inbox username
+
 RULE: administration,createforum,saveforum,editforum,editforumsave,newtopic2,setdefaultforum,topicstatus,changetopicstatus,deleteforum,deleteforumconfirm,changevisibilityconfirm,statistics,moderatetopic,moderate_deletetopic,moderate_movetotangent,moderate_movetonewtopic,moderatepost,moderatepostdeleteconfirm|iscontextlecturer
 RULE: administration,createforum,saveforum,editforum,editforumsave,newtopic2,setdefaultforum,topicstatus,changetopicstatus,deleteforum,deleteforumconfirm,changevisibilityconfirm,statistics,moderatetopic,moderate_deletetopic,moderate_movetotangent,moderate_movetonewtopic,moderatepost,moderatepostdeleteconfirm|isAdmin
 
