--- a/forum/register.conf
+++ b/forum/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Discussion Forum
 MODULE_DESCRIPTION: This is a bulletin board system that allows users to post messages for others to read, and to reply to messages posted by other users. Messages are structured in a tree format but users can select how the forum is displayed to them. There is also support for tangents and moderation of messages.
 MODULE_AUTHORS: Tohir Solomons, enhancements by David Wafula
 MODULE_RELEASEDATE: 2006 08 25
-MODULE_VERSION: 3.020
+MODULE_VERSION: 3.021
 MODULE_PATH: forum
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -22,6 +22,7 @@ MENU_CATEGORY: user
 SIDEMENU: resources-2|site
 SIDEMENU: elearnpostlogin-2
 
+UPDATE_DESCRIPTION: Placed semi colons
 UPDATE_DESCRIPTION: Added language items
 UPDATE_DESCRIPTION: Changed user interface
 UPDATE_DESCRIPTION: [dwk] Changed the email class to use mailer, and to send messages BCC 3.009
@@ -56,8 +57,8 @@ CONDITION: isAdmin|isAdmin
 CONFIG: forum_mail_host|0|mod_forum_mail_host
 CONFIG: forum_inbox_username|0|mod_forum_config_inbox_username
 CONFIG: forum_inbox_password|0|mod_forum_config_inbox_password
-CONFIG forum_email_port|0|mod_forum_config_email_port
-CONFIG forum_email_options|0|mod_forum_config_email_options
+CONFIG: forum_email_port|0|mod_forum_config_email_port
+CONFIG: forum_email_options|0|mod_forum_config_email_options
 
 TEXT: mod_forum_mail_host|The mail host|Mail inbox host
 TEXT: mod_forum_config_email_options|Mail options|Email inbox options
