Work on personal blogs from last night

--- a/simpleblog/register.conf
+++ b/simpleblog/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Simple blog
 MODULE_DESCRIPTION: A simplified version of a blog module that makes use a simplified, dynamic canvas interface allowing users to turn on side blocks using page level blocks. Supports personal blogs, site-level blogs and context-level blogs.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 17, 2011, 1:41 pm
-MODULE_VERSION: 0.062
+MODULE_VERSION: 0.064
 MODULE_PATH: simpleblog
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -13,6 +13,7 @@ MODULE_CATEGORY: simpleblog
 MODULE_STATUS: stable
 TAGS: blog
 
+UPDATE_DESCRIPTION: [dwk] Added first iteration of personal blog block 0.063-0.064
 UPDATE_DESCRIPTION: [dwk] Language items, added recent site posts block, various refactors, turned off title wrapping in blocks, fixed page nav for by=user, removed jQuery.live() use. 0.062
 UPDATE_DESCRIPTION: [dwk] Changed general posts to show all public posts 0.053
 UPDATE_DESCRIPTION: [dwk] Added comment type setting 0.052
@@ -51,7 +52,7 @@ MENU_CATEGORY: User
 SIDEMENU: user-1
 
 COMMENT: --- Register the blocks that this module provides
-//WIDEBLOCK  simpleblogmiddle
+WIDEBLOCK: personalblog
 WIDEBLOCK: siteblog
 WIDEBLOCK: contextblog
 BLOCK: addpost
@@ -114,6 +115,7 @@ TEXT: mod_simpleblog_sitefeed|Site blog feed|Site blog feed
 TEXT: mod_simpleblog_userfeed|User blog feed|User blog feed
 
 TEXT: mod_simpleblog_mrecentsite|Latest site blog post|Latest site blog post
+TEXT: mod_simpleblog_allpersonal|Personal blog(s)|Personal blog posts
 
 TEXT: mod_simpleblog_nfprivatecontext|[-CONTEXT-] is not public|[-CONTEXT-] is not public
 TEXT: mod_simpleblog_nfprivatecontextdes|Only blogs in open [-CONTEXTS-] can have public feeds|Only blogs in open [-CONTEXTS-] can have public feeds
