--- a/forum/register.conf
+++ b/forum/register.conf
@@ -59,12 +59,14 @@ CONFIG: forum_inbox_username|0|mod_forum_config_inbox_username
 CONFIG: forum_inbox_password|0|mod_forum_config_inbox_password
 CONFIG: forum_email_port|0|mod_forum_config_email_port
 CONFIG: forum_email_options|0|mod_forum_config_email_options
+CONIG: forum_inbox_catchall|0|mod_forum_config_inbox_catchall
 
 TEXT: mod_forum_mail_host|The mail host|Mail inbox host
 TEXT: mod_forum_config_email_options|Mail options|Email inbox options
 TEXT: mod_forum_config_email_port|Mail Port|Mail inbox Port
 TEXT: mod_forum_config_inbox_password|Mail inbox password|Mail password
 TEXT: mod_forum_config_inbox_username|Inbox username|Mail Inbox username
+TEXT: mod_forum_config_inbox_catchall|Inbox catch all address|The catch all inbox where the emails are going to be pulled
 
 RULE: administration,createforum,saveforum,editforum,editforumsave,newtopic2,setdefaultforum,topicstatus,changetopicstatus,deleteforum,deleteforumconfirm,changevisibilityconfirm,statistics,moderatetopic,moderate_deletetopic,moderate_movetotangent,moderate_movetonewtopic,moderatepost,moderatepostdeleteconfirm|iscontextlecturer
 RULE: administration,createforum,saveforum,editforum,editforumsave,newtopic2,setdefaultforum,topicstatus,changetopicstatus,deleteforum,deleteforumconfirm,changevisibilityconfirm,statistics,moderatetopic,moderate_deletetopic,moderate_movetotangent,moderate_movetonewtopic,moderatepost,moderatepostdeleteconfirm|isAdmin
