Fixed edit icon bug

--- a/forum/register.conf
+++ b/forum/register.conf
@@ -22,6 +22,7 @@ MENU_CATEGORY: user
 SIDEMENU: resources-2|site
 SIDEMENU: elearnpostlogin-2
 
+UPDATE_DESCRIPTION: Fixed edit icon bug
 UPDATE_DESCRIPTION: Placed semi colons
 UPDATE_DESCRIPTION: Added language items
 UPDATE_DESCRIPTION: Changed user interface
