Added author field, and changed dropdowns to dynamic data input via defaultdata.xml, added group for abstract reviewers

--- a/simpletalk/register.conf
+++ b/simpletalk/register.conf
@@ -13,7 +13,8 @@ MODULE_CATEGORY: simpletalk
 MODULE_STATUS: beta
 
 TABLE: tbl_simpletalk_abstracts
-
+TABLE: tbl_simpletalk_durations
+TABLE: tbl_simpletalk_tracks
 
 MENU_CATEGORY: User
 
