--- a/simpletalk/register.conf
+++ b/simpletalk/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Conference proposal
 MODULE_DESCRIPTION: A simplified version of an interface to submit a conference talk proposal and have it accepted or rejected for a conference.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: August 5, 2013, 4:26 pm
-MODULE_VERSION: 0.003
+MODULE_VERSION: 0.020
 MODULE_PATH: simpletalk
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -18,12 +18,16 @@ TABLE: tbl_simpletalk_tracks
 
 MENU_CATEGORY: User
 
+TEXT: help_simpletalk_about_title|Submit a talk abstract|Submit a talk abstract
+TEXT: help_simpletalk_about|About the module|Use this module to submit a talk abstract to a conference or event. Reviewers can also use this module to review and approve or reject submitted abstracts. 
+
+TEXT: mod_simpletalk_authors|Authors list|List of authors, in the format SURNAME, INITIAL; SURNAME, INITIAL
 TEXT: mod_simpletalk_instructions|Instructions for filling the form|Please complete the details of your title and abstract proposal in the form provided. If you have not completed your details on the site, please do so now by selecting the "My Profile" link from the menu.
 TEXT: mod_simpletalk_title|Title of your proposed talk|Title of your proposed talk
 TEXT: mod_simpletalk_abstract|Talk abstract|Talk abstract
 TEXT: mod_simpletalk_duration|Talk duration|Talk duration
-TEXT: mod_simpletalk_track1|First track title|Free software in business (particularly SMES)
-TEXT: mod_simpletalk_track2|Second track title|Free software in government and education
-TEXT: mod_simpletalk_track3|Third track title|Free software for geeks
 TEXT: mod_simpletalk_track|Talk track|What track does your talk fit best in
 TEXT: mod_simpletalk_requirements|Any special requirements|Indicate any special requirements you may have for your presentation
+TEXT: mod_simpletalk_showall|All submitted abstracts|All submitted abstracts
+TEXT: mod_simpletalk_submit|Submit an abstract|Submit an abstract
+TEXT: mod_simpletalk_noright|Displayed when the user is not an abstract administrator|Only abstract administrators can view these data
