Fixed pull mail

--- a/forum/register.conf
+++ b/forum/register.conf
@@ -55,12 +55,12 @@ DEPENDS_CONTEXT: 0
 CONDITION: iscontextlecturer|isContextMember|Lecturers
 CONDITION: isAdmin|isAdmin
 
-CONFIG: forum_mail_host|0|mod_forum_mail_host
-CONFIG: forum_inbox_username|0|mod_forum_config_inbox_username
-CONFIG: forum_inbox_password|0|mod_forum_config_inbox_password
-CONFIG: forum_email_port|0|mod_forum_config_email_port
-CONFIG: forum_email_options|0|mod_forum_config_email_options
-CONIG: forum_inbox_catchall|0|mod_forum_config_inbox_catchall
+CONFIG: forum_mail_host|Undifined|mod_forum_mail_host
+CONFIG: forum_inbox_username|Undifined|mod_forum_config_inbox_username
+CONFIG: forum_inbox_password|Undifined|mod_forum_config_inbox_password
+CONFIG: forum_email_port|Undifined|mod_forum_config_email_port
+CONFIG: forum_email_options|Undifined|mod_forum_config_email_options
+CONIG: forum_inbox_catchall|Undifined|mod_forum_config_inbox_catchall
 
 TEXT: mod_forum_mail_host|The mail host|Mail inbox host
 TEXT: mod_forum_config_email_options|Mail options|Email inbox options
@@ -114,6 +114,7 @@ USES: word_by|by|By
 USES: word_on|on|On
 USES: word_at|at|At
 USES: word_re|re|Re
+USES: word_workgroup|word workgroup|Workgroup
 USES: phrase_topicsinforum|Topics in forum|Topics in
 USES: phrase_save|Save|Save
 USES: phrase_viewattachment|view attachment|View
