Added labels and edit capability

--- a/simpletalk/register.conf
+++ b/simpletalk/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Conference proposal
 MODULE_DESCRIPTION: A simplified version of an interface to submit a conference talk proposal and have it accepted or rejected for a conference.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: August 5, 2013, 4:26 pm
-MODULE_VERSION: 0.022
+MODULE_VERSION: 0.023
 MODULE_PATH: simpletalk
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -31,3 +31,12 @@ TEXT: mod_simpletalk_requirements|Any special requirements|Indicate any special 
 TEXT: mod_simpletalk_showall|All submitted abstracts|All submitted abstracts
 TEXT: mod_simpletalk_submit|Submit an abstract|Submit an abstract
 TEXT: mod_simpletalk_noright|Displayed when the user is not an abstract administrator|Only abstract administrators can view these data
+
+TEXT: mod_simpletalk_tl_sh|Title|Title
+TEXT: mod_simpletalk_au_sh|Author(s)|Author(s)
+TEXT: mod_simpletalk_dr_sh|Duration|Duration
+TEXT: mod_simpletalk_tr_sh|Track|Track
+TEXT: mod_simpletalk_ab_sh|Abstract|Abstract
+TEXT: mod_simpletalk_rq_sh|Requirements|Requirements
+TEXT: mod_simpletalk_sb_sh|Submitted by|Submitted by
+TEXT: mod_simpletalk_dt_sh|Date submitted|Date submitted
