--- a/simpletalk/register.conf
+++ b/simpletalk/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Conference proposal
 MODULE_DESCRIPTION: A simplified version of an interface to submit a conference talk proposal and have it accepted or rejected for a conference.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: August 5, 2013, 4:26 pm
-MODULE_VERSION: 0.023
+MODULE_VERSION: 0.025
 MODULE_PATH: simpletalk
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -22,7 +22,7 @@ TEXT: help_simpletalk_about_title|Submit a talk abstract|Submit a talk abstract
 TEXT: help_simpletalk_about|About the module|Use this module to submit a talk abstract to a conference or event. Reviewers can also use this module to review and approve or reject submitted abstracts. 
 
 TEXT: mod_simpletalk_authors|Authors list|List of authors, in the format SURNAME, INITIAL; SURNAME, INITIAL
-TEXT: mod_simpletalk_instructions|Instructions for filling the form|Please complete the details of your title and abstract proposal in the form provided. If you have not completed your details on the site, please do so now by selecting the "My Profile" link from the menu.
+TEXT: mod_simpletalk_instructions|Instructions for filling the form|Please complete the details of your title and abstract proposal in the form provided. If you have not completed your details on the site, please do so now by selecting the "My Profile" link from the menu. Please login with your Google, Facebook, Twitter or Yahoo Id if you want to save and edit your abstract later.
 TEXT: mod_simpletalk_title|Title of your proposed talk|Title of your proposed talk
 TEXT: mod_simpletalk_abstract|Talk abstract|Talk abstract
 TEXT: mod_simpletalk_duration|Talk duration|Talk duration
@@ -30,7 +30,8 @@ TEXT: mod_simpletalk_track|Talk track|What track does your talk fit best in
 TEXT: mod_simpletalk_requirements|Any special requirements|Indicate any special requirements you may have for your presentation
 TEXT: mod_simpletalk_showall|All submitted abstracts|All submitted abstracts
 TEXT: mod_simpletalk_submit|Submit an abstract|Submit an abstract
-TEXT: mod_simpletalk_noright|Displayed when the user is not an abstract administrator|Only abstract administrators can view these data
+TEXT: mod_simpletalk_noright|Displayed when the user is not an abstract administrator|You are not logged in. If you have submitted an abstract, you need to login using the same account you submitted it from to edit it. You can login with your Google, Facebook, Twitter or Yahoo credentials.
+TEXT: mod_simpletalk_plslogin|Please consider logging in|Please consider logging in with your Google, Faceboo, Twitter or YahooId. If you do so, you will be able to save your abstract and edit it again.
 
 TEXT: mod_simpletalk_tl_sh|Title|Title
 TEXT: mod_simpletalk_au_sh|Author(s)|Author(s)
@@ -40,3 +41,4 @@ TEXT: mod_simpletalk_ab_sh|Abstract|Abstract
 TEXT: mod_simpletalk_rq_sh|Requirements|Requirements
 TEXT: mod_simpletalk_sb_sh|Submitted by|Submitted by
 TEXT: mod_simpletalk_dt_sh|Date submitted|Date submitted
+TEXT: mod_simpletalk_em_sh|Email address|Email address
