Added additional functionality, including suck in species list from wikipedia.

--- a/species/register.conf
+++ b/species/register.conf
@@ -14,6 +14,7 @@ MODULE_CATEGORY: species
 TABLE: tbl_birds_list
 TABLE: tbl_mammals_list
 TABLE: tbl_plants_proteaceae_list
+TABLE: tbl_birds_brazil_list
 
 MENU_CATEGORY: User
 
