--- a/contextcontent/register.conf
+++ b/contextcontent/register.conf
@@ -3,8 +3,8 @@ MODULE_NAME: [-context-] Content
 MODULE_DESCRIPTION: A simple Content Management System for [-contexts-]. It allows [-authors-] to organise content hierarchically in chapters and pages. Each page has links to the next and previous pages.
 MODULE_AUTHORS: Tohir Solomons, Paul Mungai, Qhamani Fenama, David Wafula
 MODULE_RELEASEDATE: 2007 06 20
-MODULE_VERSION: 1.638
-MENU_CATEGORY: content
+MODULE_VERSION: 1.639
+MENU_CATEGORY: admin
 SIDEMENU_CATEGORY: context
 CONTEXT_AWARE: 1
 DEPENDS_CONTEXT: 1
@@ -14,6 +14,7 @@ DEPENDS: filemanager
 ISCONTEXTPLUGIN: 1
 TAGS: context|elearning
 
+UPDATE_DESCRIPTION: [dwk] Moved contextcontent to the admin menu
 UPDATE_DESCRIPTION: [dwk] Fixed SCORM stuff showing even if SCORM is not installed
 UPDATE_DESCRIPTION: [kdc] Fixed bug in moving pages when page is root
 UPDATE_DESCRIPTION: [dwk] Changed the New content needed to something less Klingon in nature
