Improvements to forum

--- a/forum/register.conf
+++ b/forum/register.conf
@@ -121,6 +121,7 @@ USES: word_at|at|At
 USES: word_re|re|Re
 USES: word_workgroup|word workgroup|Workgroup
 USES: word_title|Title|Title
+USES: word_email|email|email
 USES: phrase_topicsinforum|Topics in forum|Topics in
 USES: phrase_save|Save|Save
 USES: phrase_viewattachment|view attachment|View
@@ -131,6 +132,8 @@ USES: phrase_delete_post|Delete post|Delete post
 USES: phrase_nosubscription|Do not notify me|Do not notify me
 USES: phrase_notifyme|Notify me of this topic|Notify me of this topic
 USES: phrase_notifyall|Notify me of all topics and replies in this forum|Notify me of all topics and replies in this forum
+USES: phrase_subscribetoforum|Subscribe to forum|Subscribe to forum
+USES: phrase_unsubscribetoforum|Unsubscribe to forum|Unsubscribe from forum
 
 TEXT: mod_forum_allow_prelogin_desc|description of config variable|Can users view forum without logging in
 TEXT: mod_forum_showfullname_desc|description of config variable|Should full names or just username
@@ -266,7 +269,7 @@ TEXT: mod_forum_archivewarning|Only topics that start on this date and afterward
 TEXT: mod_forum_archivelabel|Archive Old Posts|Archive Old Posts
 
 
-TEXT: mod_forum_forumlocked|Forum Locked|Forum Locked
+TEXT: mod_forum_forumlocked|Forum Locked|Locked
 TEXT: mod_forum_archivedate|Archive Date|Archive Date
 
 
