--- a/announcements/register.conf
+++ b/announcements/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Announcements
 MODULE_DESCRIPTION: Enables [-AUTHORS-] to post announcements which can be viewed by all the [-READONLYS-] within a [-CONTEXT-].
 MODULE_AUTHORS: Joel Kimilu, Tohir Solomons, Paul Mungai
 MODULE_RELEASEDATE: 2008 01 25
-MODULE_VERSION: 0.379
+MODULE_VERSION: 0.380
 MODULE_PATH: announcements
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
@@ -22,6 +22,7 @@ MODULE_STATUS: stable
 
 CONFIG: SEND_ANN_BODY|FALSE|mod_announcement_includeannbody
 
+UPDATE_DESCRIPTION: [JOC] Changed _email to users_ default setting to yes. 0.380
 UPDATE_DESCRIPTION: [dwk] Removed jQuery live 0.379
 UPDATE_DESCRIPTION: [JOC] Fixed bugs. Added To recipient. 0.378
 UPDATE_DESCRIPTION: [JOC] Changed language element. 0.377
