A multitude of fixes and unbuggers for the CMS module

--- a/cms/register.conf
+++ b/cms/register.conf
@@ -2,7 +2,7 @@ MODULE_ID: cms
 MODULE_NAME: CMS
 MODULE_DESCRIPTION: A system for the publishing and management of content, including HTML, documents and rich media. The module requires no user input as it only displays the content that has been created and managed using the CMS Administration module.  
 MODULE_RELEASEDATE: 2006 06 14
-MODULE_VERSION: 1.267
+MODULE_VERSION: 1.270
 MODULE_PATH: cms
 MODULE_AUTHORS: Wesley Nitskie, Prince Mbekwa, Charl Mert, Paul Mungai
 MODULE_ISADMIN: 1
@@ -14,6 +14,7 @@ MENU_CATEGORY: user
 MODULE_STATUS: beta
 DEPENDS: cmsadmin
 
+UPDATE_DESCRIPTION: (dwk) Added blocks functionality
 UPDATE_DESCRIPTION: Fixed pagemenu to work when you not logged in
 UPDATE_DESCRIPTION: Reverted to the previous version
 UPDATE_DESCRIPTION: Refactored showbody method in CMS
@@ -23,6 +24,8 @@ UPDATE_DESCRIPTION: Fixed Undefined Index Bug
 UPDATE_DESCRIPTION: Fixed Hidden Table Bug
 UPDATE_DESCRIPTION: Fixed unknown variable notice
 
+WIDEBLOCK: showpage
+
 CONFIG: disablemenu|false|mod_cms_disablemenu
 
 TAGS: content management|cms
@@ -30,6 +33,7 @@ TAGS: content management|cms
 TEXT: help_cms_about_title|title for about page|About CMS
 TEXT: help_cms_about|description of the cms module|A system for the publishing and management of content, including HTML, documents and rich media. The module requires no user input as it only displays the content that has been created and managed using the CMS Administration module.
 
+TEXT: mod_cms_pageblock|View CMS page|View CMS page
 TEXT: mod_cms_pagearchived|page is archived|The page you have requested has been archived. Please contact the site administrator.
 TEXT: mod_cms_pagemissing|page is missing|The page you have requested is missing. Please contact the site administrator.
 TEXT: mod_cms_disablemenu|The phrase Disable Site Menus on CMS show content|Disable Site Menus on CMS show content
@@ -67,4 +71,3 @@ TEXT: mod_cms_feedheader|Feeds|Available Feed Formats
 TEXT: mod_cms_flag_content|Flag Content|Flag Content
 TEXT: mod_cms_mustlogin|must login message|You must be logged in to access this item.
 TEXT: word_show|show|Show
-
