Fixed menu item not appearing

--- a/cms/register.conf
+++ b/cms/register.conf
@@ -2,10 +2,10 @@ MODULE_ID: cms
 MODULE_NAME: CMS
 MODULE_DESCRIPTION: A system for the publishing and management of content, including HTML, documents and rich media. The module requires no user input as it only displays the content that has been created and managed using the CMS Administration module.  
 MODULE_RELEASEDATE: 2006 06 14
-MODULE_VERSION: 1.270
+MODULE_VERSION: 1.271
 MODULE_PATH: cms
 MODULE_AUTHORS: Wesley Nitskie, Prince Mbekwa, Charl Mert, Paul Mungai
-MODULE_ISADMIN: 1
+MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 1
 MODULE_LANGTERMS: cms
@@ -14,6 +14,7 @@ MENU_CATEGORY: user
 MODULE_STATUS: beta
 DEPENDS: cmsadmin
 
+UPDATE_DESCRIPTION: (dwk) A variety of updates and fixes
 UPDATE_DESCRIPTION: (dwk) Added blocks functionality
 UPDATE_DESCRIPTION: Fixed pagemenu to work when you not logged in
 UPDATE_DESCRIPTION: Reverted to the previous version
