--- a/cmsadmin/register.conf
+++ b/cmsadmin/register.conf
@@ -2,10 +2,10 @@ MODULE_ID: cmsadmin
 MODULE_NAME: CMS Admin
 MODULE_DESCRIPTION: This module is used to create and manage the content that will be displayed within the CMS module. It allows the user to create and organize pages of content within sections, as well as customize the way the content of each section and page is presented. Other features include Templating, Fine grain security control to content and sections, range of dynamic menus or custom menus etc.
 MODULE_RELEASEDATE: 2006 06 14
-MODULE_VERSION: 1.646
+MODULE_VERSION: 1.647
 MODULE_PATH: cmsadmin
 MODULE_AUTHORS: Wesley Nitskie, Prince Mbekwa, Charl Mert
-MODULE_ISADMIN: 0
+MODULE_ISADMIN: 1
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: CMS Admin
@@ -13,6 +13,7 @@ MODULE_CATEGORY: cms
 MODULE_STATUS: beta
 TAGS: content management|cms
 
+UPDATE_DESCRIPTION: (dwk) A variety of improvements and bugfixes 1.647
 UPDATE_DESCRIPTION: Fixed an undefined variable
 UPDATE_DESCRIPTION: Changed call to scriptaculous to the prototype module
 UPDATE_DESCRIPTION: Reverted to the previous version and fixed texblocks related issue
