Added config setting for default setting for _email to users_ radio control. 0.380

--- a/announcements/register.conf
+++ b/announcements/register.conf
@@ -21,8 +21,9 @@ DEPENDS:utilities
 MODULE_STATUS: stable
 
 CONFIG: SEND_ANN_BODY|FALSE|mod_announcement_includeannbody
+CONFIG: EMAIL_DEFAULT_SETTING|FALSE|mod_announcement_email_default_setting
 
-UPDATE_DESCRIPTION: [JOC] Changed _email to users_ default setting to yes. 0.380
+UPDATE_DESCRIPTION: [JOC] Added config setting for default setting for _email to users_ radio control. 0.380
 UPDATE_DESCRIPTION: [dwk] Removed jQuery live 0.379
 UPDATE_DESCRIPTION: [JOC] Fixed bugs. Added To recipient. 0.378
 UPDATE_DESCRIPTION: [JOC] Changed language element. 0.377
@@ -58,6 +59,8 @@ CONDITION: isadmin|isAdmin
 CONDITION: iscontextlecturer|isContextMember|Lecturers
 RULE: edit,add,delete,save|iscontextlecturer
 RULE: edit,add,delete,save|isadmin
+
+TEXT: mod_announcement_email_default_setting||Default setting for email to users _ FALSE for no _ TRUE for yes
 
 TEXT: help_announcements_emailtitle|Email subject|Important announcement
 TEXT: help_announcements_emailbody1|Email body part 1|has posted an important new announcement titled
