[pwando] - added unapprove document feature

--- a/wicid/register.conf
+++ b/wicid/register.conf
@@ -73,6 +73,7 @@ TEXT: mod_wicid_deleteallintopicmessage|Phrase Kindly delete both approved and u
 TEXT: mod_wicid_deletetopicerrormessage|Phrase Kindly delete both approved and un-approved documents in this topic before deleting it. Approved documents are listed in the Topics section on the lower part of this form|Kindly delete the documents in this topic before deleting it. These documents are listed in the Topics section on the lower part of this form
 TEXT: mod_wicid_deletetopic|Phrase Delete topic|Delete topic
 TEXT: mod_wicid_deleteselectedtopic|Phrase Delete selected topic|Delete selected topic
+TEXT: mod_wicid_unapproveselected|Phrase Unapprove selected|Unapprove selected
 TEXT: mod_wicid_selectdeletetopic|Phrase Select the topic you want to delete|Select the topic you want to delete
 TEXT: mod_wicid_startdate|Phrase The Start date|Start date
 TEXT: mod_wicid_enddate|Phrase The End date|End date
