--- a/eportfolio/register.conf
+++ b/eportfolio/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: eportfolio
 MODULE_DESCRIPTION: eportfolio module allows users to create and update their own eportfolio. A portfolio is a collection of evidence that acts as an example of one's work when one needs to show proof of their competency. ePortfolio is acronym for 'electronic portfolio'.
 MODULE_AUTHORS: Paul Mungai
 MODULE_RELEASEDATE: 2007 10 17
-MODULE_VERSION: 4.408
+MODULE_VERSION: 4.410
 MODULE_STATUS: alpha
 MODULE_PATH: eportfolio
 MODULE_ISADMIN: 0
@@ -12,6 +12,8 @@ MODULE_HASADMINPAGE: TEXT
 MODULE_LANGTERMS: eportfolio
 TAGS: ePortfolio
 
+UPDATE_DESCRIPTION: [JOC] Corrected grammar and added language element. 4.410
+UPDATE_DESCRIPTION: [JOC] Fixed functionality for deleting multiple users in group. 4.409
 UPDATE_DESCRIPTION: [pwando] - removed dependency on deprecated  contextpostlogin module. Fixed errors.
 UPDATE_DESCRIPTION: [pwando] Fixed undefined variables on view others portfolio
 UPDATE_DESCRIPTION: [pwando] Changed group title in add/modify group users
@@ -98,7 +100,9 @@ TEXT: phrase_eportfolio_notmemberofgroup|The phrase "Not a member of this group"
 TEXT: phrase_eportfolio_makememberofgroup|The phrase "Add to members list of this group"|Add to members list of this group
 TEXT: phrase_returntoeportfoliogroups|The phrase "Return To ePortfolio Groups"|Return To ePortfolio Groups
 TEXT: phrase_eportfolio_confirmdeleteuser|The phrase "Are you sure you want to delete this user"|Are you sure you want to delete this user?
+TEXT: phrase_eportfolio_confirmdeleteusers|The phrase "Are you sure you want to delete these user(s)"|Are you sure you want to delete these user(s)?
 TEXT: phrase_eportfolio_membersuccessfullyremoved|The phrase "The Group Member has been succesfully removed from the group"|The Group Member has been succesfully removed from the group
+TEXT: phrase_eportfolio_memberssuccessfullyremoved|The phrase "The Group Member(s) have been succesfully removed from the group"|The Group Member(s) have been succesfully removed from the group
 TEXT: phrase_eportfolio_emptypdfmessage|The phrase "Sorry, there was nothing to print on pdf from your ePortfolio. Add data then try again"|Sorry, there was nothing to print on pdf from your ePortfolio. Add data then try again
 TEXT: phrase_eportfolio_nouseridprovidedfordelete|The phrase "No Goup Member Provided for Delete"|No Goup Member Provided for Delete
 TEXT: phrase_eportfolio_usersupdated|The phrase "User(s) Added to Goup Successfully!"|User(s) Added to Goup Successfully!
