Corrected grammar and added language element. 4.411

--- a/eportfolio/register.conf
+++ b/eportfolio/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: eportfolio
 MODULE_DESCRIPTION: eportfolio module allows users to create and update their own eportfolio. A portfolio is a collection of evidence that acts as an example of one's work when one needs to show proof of their competency. ePortfolio is acronym for 'electronic portfolio'.
 MODULE_AUTHORS: Paul Mungai
 MODULE_RELEASEDATE: 2007 10 17
-MODULE_VERSION: 4.410
+MODULE_VERSION: 4.411
 MODULE_STATUS: alpha
 MODULE_PATH: eportfolio
 MODULE_ISADMIN: 0
@@ -12,6 +12,7 @@ MODULE_HASADMINPAGE: TEXT
 MODULE_LANGTERMS: eportfolio
 TAGS: ePortfolio
 
+UPDATE_DESCRIPTION: [JOC] Corrected grammar and added language element. 4.411
 UPDATE_DESCRIPTION: [JOC] Corrected grammar and added language element. 4.410
 UPDATE_DESCRIPTION: [JOC] Fixed functionality for deleting multiple users in group. 4.409
 UPDATE_DESCRIPTION: [pwando] - removed dependency on deprecated  contextpostlogin module. Fixed errors.
@@ -104,7 +105,8 @@ TEXT: phrase_eportfolio_confirmdeleteusers|The phrase "Are you sure you want to 
 TEXT: phrase_eportfolio_membersuccessfullyremoved|The phrase "The Group Member has been succesfully removed from the group"|The Group Member has been succesfully removed from the group
 TEXT: phrase_eportfolio_memberssuccessfullyremoved|The phrase "The Group Member(s) have been succesfully removed from the group"|The Group Member(s) have been succesfully removed from the group
 TEXT: phrase_eportfolio_emptypdfmessage|The phrase "Sorry, there was nothing to print on pdf from your ePortfolio. Add data then try again"|Sorry, there was nothing to print on pdf from your ePortfolio. Add data then try again
-TEXT: phrase_eportfolio_nouseridprovidedfordelete|The phrase "No Goup Member Provided for Delete"|No Goup Member Provided for Delete
+TEXT: phrase_eportfolio_nouseridprovidedfordelete|The phrase "No Group Member Provided for Delete"|No Group Member Provided for Delete
+TEXT: phrase_eportfolio_nouseridsprovidedfordelete|The phrase "No Group Member(s) Provided for Delete"|No Group Member(s) Provided for Delete
 TEXT: phrase_eportfolio_usersupdated|The phrase "User(s) Added to Goup Successfully!"|User(s) Added to Goup Successfully!
 TEXT: mod_eportfolio_title|Form Title|User Details
 TEXT: mod_eportfolio_owner|The Word Owner|Owner
