--- a/mcqtests/register.conf
+++ b/mcqtests/register.conf
@@ -4,7 +4,7 @@ MODULE_STATUS: stable
 MODULE_DESCRIPTION: The MCQ (multiple choice question) Test module allows [-authors-] to set up MCQ tests, define the a period of time when [-readonlys-] will be able to access the test and restrict the test to specific computer labs. The order of questions and answers can be scrambled so that no two [-readonlys-] will get a test with the questions and the answers in the same order.
 MODULE_AUTHORS: Megan Watson, Kevin Cyster, Paul Mungai, Nguni Phakela
 MODULE_RELEASEDATE: 2007 01 01
-MODULE_VERSION: 4.131
+MODULE_VERSION: 4.133
 MODULE_PATH: mcqtests
 MODULE_CATEGORY: assessment
 ISCONTEXTPLUGIN: 1
@@ -14,6 +14,8 @@ ISCONTEXTPLUGIN: 1
 MENU_CATEGORY: assessment
 PAGE: lecturer_assignment
 
+UPDATE_DESCRIPTION: [JOC] Changed naming of config settings created in 4.132. 4.133
+UPDATE_DESCRIPTION: [JOC] Added config settings to allow or not allow scrambling of questions and answers in preview. 4.132
 UPDATE_DESCRIPTION: [JOC] Bug fix relating to the marking of freeform type questions in students_ test results
 UPDATE_DESCRIPTION: [JOC] Bug fixes relating to the displaying of the mark for freeform type questions in student_s test results
 UPDATE_DESCRIPTION: [JOC] Bug fix for marking of freeform question types
@@ -128,6 +130,12 @@ TABLE: tbl_test_question_numericalunits
 TABLE: tbl_test_question_numericaloptions
 
 CONFIG: DO_CLEANUP|0|mod_mcqtests_cleanup
+CONFIG: PREVIEW_SCRAMBLED_QUESTIONS|TRUE|mod_mcqtests_preview_allow_scrambled_questions
+CONFIG: PREVIEW_SCRAMBLED_ANSWERS|TRUE|mod_mcqtests_preview_allow_scrambled_answers
+
+TEXT: mod_mcqtests_cleanup|Cleanup data|Perform cleanup of invalid userId's when exporting data
+TEXT: mod_mcqtests_preview_allow_scrambled_questions||Allow scrambled questions in preview
+TEXT: mod_mcqtests_preview_allow_scrambled_answers||Allow scrambled answers in preview
 
 TEXT: mod_mcqtests_backtoqnbank|The phrase Back to question bank|Back to question bank
 TEXT: mod_mcqtests_questionbank|The phrase Question bank|Question bank
@@ -534,7 +542,6 @@ TEXT: mod_mcqtests_reqtext|Required Text Message|Please Enter question text
 TEXT: mod_mcqtests_reqmark|Required Mark Message|Please Enter the default mark for the question
 TEXT: mod_mcqtests_reqpenalty|Required Phrase Message|Please Enter the penalty for the question
 TEXT: mod_mcqtest_advanced|Phrase advanced tests|Advanced Tests
-TEXT: mod_mcqtests_cleanup|Cleanup data|Perform cleanup of invalid userId's when exporting data
 
 TEXT: mod_mcqtests_na|Not available|n/a
 TEXT: mod_mcqtests_legacynotcompleted|Legacy not completed|Legacy not completed
